--- a/19_listView/app/src/main/AndroidManifest.xml
+++ b/19_listView/app/src/main/AndroidManifest.xml
@@ -9,7 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ListView">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ListViewActivity1">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ListViewActivity2">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ListViewActivity3">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
